feat: adding responsiveness to about page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "TechMiraki",
+  "short_name": "TecMeraki",
   "name": "Industrial automation and IoT solutions",
   "icons": [
     {
