--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.10.1",
+    "react-intersection-observer": "^9.5.2",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.7.2",
     "swiper": "^9.4.1",
     "web-vitals": "^2.1.4"
   },
